# django-hines

./: .browserslistrc  .dockerignore  .env.dist  .gitignore  .gitmodules  .pre-commit-config.yaml  .slugignore  .travis.yml  Pipfile  Procfile  README.md  README.mdown  REQUIREMENTS.txt  Vagrantfile  biome.jsonc  devcontainer.json  docker-compose.yml  gulpfile.js  manage.py  package-lock.json  package.json  prek.toml  pyproject.toml  requirements.in  requirements.txt  run  run-tests.sh  setup.cfg
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml  test-and-deploy.yml  test.yml
.profile.d/: ssh_setup.sh
assets/js/: hines._utils.js  hines.navbar.js  hines.stats.js
assets/sass/: _functions.scss  _svgs.scss  _variables.scss  admin.scss  site.scss
conf/: djangoq_hines.service  gunicorn_hines.service  gunicorn_hines.socket  nginx.conf  systemd_gunicorn.service  systemd_gunicorn.socket
config/: urls.py  vagrant  vagrant.yml  wsgi.py
config/settings/: base.py  defaults.py  development.py  local.py  production.py  tests.py  vagrant.py
docker/assets/: Dockerfile
docker/web/: Dockerfile
hines/: context_processors.py  settings.py.template  settings_default.py  shortcuts.py  urls.py
hines/aggregator/: admin.py  managers.py  models.py  tests.py  urls.py  views.py
hines/blocks/: admin.py  apps.py  factories.py  models.py
hines/books/: admin.py  managers.py  models.py  tests.py  urls.py  views.py
hines/config/: settings.py  urls.py  wsgi.py
hines/core/: __init__.py  app_settings.py  apps.py  context_processors.py  converters.py  feeds.py  models.py  paginator.py  recent.py  sitemaps.py  (+6 more)
requirements/: base.txt  local.txt  production.txt  tests.txt  vagrant.txt
scripts/: coverage.sh  manage.sh  pipenv-run-tests.sh  run-tests.sh  run-web.sh  wait-for-postgres.py  web
tests/: __init__.py  test_admins.py
(+1176 files in other folders)
