[project]
dependencies = [
  "beautifulsoup4",
  "bleach",
  "boto3",
  "dj-database-url",
  "Django",
  "django-autocomplete-light",
  "django-contrib-comments",
  "django-cors-headers",
  "django-ditto",
  "django-extensions",
  "django-hcaptcha",
  "django-q2",
  "django-redis",
  "django-spectator",
  "django-storages",
  "gunicorn",
  "ipython",
  "markdown2",
  "psycopg[binary]",
  "pygments",
  "python-dotenv",
  "requests",
  "sentry-sdk",
  "setproctitle",
  "smartypants",
]
name = "django-hines"
requires-python = "~=3.10"
version = "1.0"

[tool.coverage.report]
omit = ["*/migrations/*"]

[tool.coverage.run]
branch = true
include = ["hines/*"]
omit = ["*/migrations/*.py"]

[tool.ruff]
extend-exclude = [
  "*/migrations/*",
]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
ignore = []
select = [
  # Reference: https://docs.astral.sh/ruff/rules/
  "B",    # flake8-bugbear
  "E",    # pycodestyle
  "F",    # Pyflakes
  "G",    # flake8-logging-format
  "I",    # isort
  "N",    # pip8-naming
  "Q",    # flake8-quotes
  "BLE",  # flake8-blind-except
  "DJ",   # flake8-django
  "DTZ",  # flake8-datetimez
  "EM",   # flake8-errmsg
  "INP",  # flake8-no-pep420
  "FBT",  # flake8-boolean-trap
  "PIE",  # flake8-pie
  "RSE",  # flake-raise
  "SIM",  # flake8-simplify
  "T20",  # flake8-print
  "TID",  # flake8-tidy-imports
  "UP",   # pyupgrade
  "RUF100", # unused-noqa
  "RUF200", # invalid-pyproject-toml
]

[tool.uv]
dev-dependencies = [
  "coverage[toml]",
  "django-debug-toolbar",
  "factory-boy",
  "freezegun",
  "responses",
  "ruff",
  "tblib",
  # For tracebacks when running tests in parallel
  "unittest-parametrize",
  "coverage[toml]>=7.6.1",
]

[tool.uv.pip]
generate-hashes = true
python-version = "3.10"
